#3: try to fix 100vh for hero header on mobile

--- a/website/src/assets/css/style.css
+++ b/website/src/assets/css/style.css
@@ -193,7 +193,10 @@ h1, h2, h3, h4, h5, h6 {
 --------------------------------------------------------------*/
 #hero {
   width: 100%;
-  height: 100vh;
+  height: 100vh; /* fall-back */
+  height: -moz-available;
+  height: -webkit-fill-available;
+  height: fill-available;
   background: url("../img/hero-bg.png") bottom center;
   background-size: cover;
 }
