--- a/website/src/assets/scss/_hero.scss
+++ b/website/src/assets/scss/_hero.scss
@@ -3,7 +3,12 @@
 --------------------------------------------------------------*/
 #hero {
   width: 100%;
-  height: 100vh;
+  height: 100vh; /* fall-back */
+  height: -moz-available;
+  height: -webkit-fill-available;
+  height: fill-available;
+
+
   background: url("../img/hero-bg.png") bottom center;
   background-size: cover;
 
@@ -39,6 +44,7 @@
     margin-bottom: 50px;
     font-size: 26px;
     font-family: $font-secondary;
+
     span {
       color: $white;
       padding-bottom: 4px;
